@@ -5550,6 +5550,17 @@ argument_list|(
 literal|2
 argument_list|)
 decl_stmt|;
+specifier|final
+name|long
+name|readTimeout
+init|=
+name|dfsClient
+operator|.
+name|getDatanodeReadTimeout
+argument_list|(
+literal|2
+argument_list|)
+decl_stmt|;
 name|OutputStream
 name|unbufOut
 init|=
@@ -5570,6 +5581,8 @@ operator|.
 name|getInputStream
 argument_list|(
 name|sock
+argument_list|,
+name|readTimeout
 argument_list|)
 decl_stmt|;
 name|IOStreamPair
@@ -6928,6 +6941,18 @@ operator|.
 name|length
 argument_list|)
 decl_stmt|;
+name|long
+name|readTimeout
+init|=
+name|dfsClient
+operator|.
+name|getDatanodeReadTimeout
+argument_list|(
+name|nodes
+operator|.
+name|length
+argument_list|)
+decl_stmt|;
 name|OutputStream
 name|unbufOut
 init|=
@@ -6948,6 +6973,8 @@ operator|.
 name|getInputStream
 argument_list|(
 name|s
+argument_list|,
+name|readTimeout
 argument_list|)
 decl_stmt|;
 name|IOStreamPair
